# HangoutCore

./: .gitignore  README.md  __main__.py  config.py  hangoutcore.properties  hangoutcore.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  util.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  command-request.md  custom.md  feature-request.md
cogs/: general.py  moderation.py  music.py  system.py
dev/: build.py
hangoutcore/: __init__.py  __main__.py  __start_main__.py  _version.py  app.py  bot.py  setup.py  util.py
hangoutcore/SystemCogs/: development.py  economy.py  general.py  moderation.py  system.py
hangoutcore/utils/: __init__.py  config.py  database.py  local.py  terminal.py  ui.py
utils/: database.py
