[tool.poetry]
name = "HangoutCore"
version = "2.89.1"
description = "HangoutCore is a modular bot based on Discord.py designed to be a starting point for intermediate Discord Bot Developers looking for a decent skeletal framework to build off of."
authors = ["Lino <hutchinsl0507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = {extras = ["voice"], version = "^2.1.0"}
aiofiles = "^22.1.0"
aiohttp = "^3.8.3"
aiomysql = "^0.1.1"
aiosignal = "^1.3.1"
click = "^8.1.3"
colorama = "^0.4.6"
ffmpeg = "^1.4"
jproperties = "^2.1.1"
pymysql = "^1.0.2"
questionnaire = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.17.0"}


[tool.poetry.group.extras.dependencies]
windows-curses = {version = "^2.3.1", optional = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"