[metadata]
name = hangoutcore
version = 4.00.00
description = A modular bot for teaching new developers
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NextYearStudios/HangoutCore

[options]
packages = find_namespace:
python_requires = >=3.10.6
include_package_data = True
install_requires =
    aiomysql
    discord.py[voice]
    jproperties
    requests
    rich

[options.entry_points]
console_scripts =
    start-bot=hangoutcore.__start_main__:__init__
    setup-bot=hangoutcore.__setup__:__init__

[options.packages.find]
include =
    hangoutcore
    hangoutcore.*