[metadata]
name = hangoutcore
version = 4.0.0
description = A reliable and easy-to-understand Discord bot framework.
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NextYearStudios/HangoutCore
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find_namespace:
python_requires = >=3.10
include_package_data = True
install_requires =
    aiomysql
    discord.py[voice]
    jproperties
    requests
    rich
    PyNaCl

[options.entry_points]
console_scripts =
    start-bot=hangoutcore.__main__:__init__
    setup-bot=hangoutcore.__setup__:__init__

[options.packages.find]
include =
    hangoutcore
    hangoutcore.*

[options.exclude_package_data]
* =
    __pycache__
    *.pyc
    hangoutcore_venv
    dev
    cogs
    configs
    tests
    .github
    .vscode