[metadata]
name = hangoutcore
version = 4.0.0
description = A reliable and easy-to-understand Discord bot framework.
license = GPL-3.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NextYearStudios/HangoutCore
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find_namespace:
python_requires = >=3.10
include_package_data = True
install_requires =
    aiomysql
    bcrypt
    cryptography
    discord.py[voice]
    fastapi[standard]
    jproperties
    pynacl
    requests
    rich
    uvicorn[standard]

[options.entry_points]
console_scripts =
    hangoutcore=hangoutcore.__main__:init
    hangoutcore-token=hangoutcore.secrets.token_wizard:main

[options.packages.find]
include =
    hangoutcore
    hangoutcore.*

[options.package_data]
hangoutcore =
    config/defaults/*.json
    webserver/static/css/*.css
    webserver/static/js/*.js
    webserver/templates/*.html
    py.typed

[options.exclude_package_data]
* =
    __pycache__
    *.pyc
    venv
    dev
    cogs
    configs
    tests
    .github
    .vscode